Trying to have video-container stop overflow without using overflow:hidden because it messes with position: sticky used for the cursor

--- a/home.css
+++ b/home.css
@@ -13,6 +13,7 @@
         width: 100vw;
         /* overflow-x: hidden; */
         box-sizing: border-box;
+        background-color: #f4f4f4;
        
     }
     
@@ -507,20 +508,18 @@
         height: 66rem;
         /* overflow: hidden; */
         position: relative;
-        
-        
-    
+        background-color: black;
+        background-size: cover;
     }
     #video-header {
         display: flex;
         align-items: center;
-        width: 100%;
+        height: 66rem;
+        position: absolute;   
         
-        position: absolute;
-        
-        
-        
-        
+    }
+    #video-1 {
+        object-fit: cover;
     }
     
     #cursor-video {
@@ -557,7 +556,7 @@
     /* --AWARDS  */
     #awards-container {
         display: flex;
-        padding: 15rem 2rem;
+        padding: 15% 3%;
         justify-content: center;
        
     }
@@ -566,14 +565,34 @@
         display: inline-flex;
         justify-content: center;
     }
+    .awards-container_li a {
+        width: 50%;
+        display: inline-flex;
+        flex-flow: column;
+        align-items: center;
+    }
+    .awards-container_li a:hover > img {
+        transform: scale(1.1);
+        transition: transform 0.4s ease;
+    }
+    .awards-container_li a:hover > img + span {
+        text-decoration: underline;
+        text-decoration-thickness: 2px;
+    }
     .awards-container_li span {
-        margin-top: 1.5rem;
+        margin-top: 2rem;
         text-align: center;
-        max-width: 20rem;
-        font-size: 0.7rem;
+        max-width: 12rem;
+        font-size: 0.8rem;
+        line-height: 1.2rem;
     }
 
-
+    .awards-container_li img {
+        transform: scale(1);
+        transition: transform 0.4s ease;
+        width: 75%;
+        aspect-ratio: 175/101;
+    }
 
 }
 
@@ -594,9 +613,7 @@
         #animation-slide {
             display: none;
         }
-        html {
-            font-size: 70%;
-        }
+       
         #dropdown-page header {
             /* padding: 4% 5%; */
         }
@@ -625,7 +642,7 @@
 
         #dropdown-body-2 {
             display: block;
-            font-size: 250%;
+            font-size: 160%;
             font-weight: 500;
             padding: 0 80px;
         }
